--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,17 +13,17 @@ spring:
   datasource:
     url: jdbc:mariadb://localhost:3306/sample
     username: root
-    password: root
+    password: Palmeiras123
     driver-class-name: org.mariadb.jdbc.Driver
   jpa:
     show-sql: true
     hibernate:
-      ddl-auto: none
+      ddl-auto: update
     properties:
       hibernate:
         format_sql: true
     database: mysql
-    database-platform:
+    database-platform: org.hibernate.dialect.MariaDB103Dialect
   flyway:
     enabled: true
   devtools:
