--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,8 @@
         <jjwt.version>0.11.5</jjwt.version>
         <modelmapper.version>3.1.0</modelmapper.version>
         <springdoc.version>2.2.0</springdoc.version>
-        <sonar.projectKey>seu_project_key</sonar.projectKey>
-        <sonar.organization>seu_organization</sonar.organization>
+        <sonar.projectKey>CarolineNunes_Programa-o-de-Scripts</sonar.projectKey>
+        <sonar.organization>CarolineNunes</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
         <sonar.coverage.jacoco.xmlReportPaths>target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
     </properties>
